# photo_time_dep

./: .clang-format  CMakeLists.txt  log.out  test.inp  test_wrt.inp
deploy/: clear.sh  plot.py  run.sh  settings.inp
src/: basis.cpp  basis.h  constants.h  control_data.cpp  control_data.h  disk_reader.cpp  disk_reader.h  main.cpp  procedures.cpp  procedures.h  tempCodeRunnerFile  utils.cpp  utils.h
